--- a/.htaccess
+++ b/.htaccess
@@ -5,17 +5,21 @@ Options -Indexes
 RewriteEngine On
 
 ## Umleitung auf https:
-RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
-RewriteCond %{HTTP:X-Forwarded-Proto} =""
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+#RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
+#RewriteCond %{HTTP:X-Forwarded-Proto} =""
+#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-RewriteCond %{HTTPS} !=on [OR]
-RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+#RewriteCond %{HTTPS} !=on [OR]
+#RewriteCond %{HTTPS} off
+#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 ## www in URL entfernen:
 RewriteCond %{HTTP_HOST} ^www\.jumi\.biz [NC]
 RewriteRule ^(.*)$ https://jumi.biz/$1 [L,R=301]
+
+## Dateiendungen entfernen
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.php [NC,L]
 
 ## Cache-Dauer für Dateitypen:
 ExpiresByType image/jpg "access plus 1 month"
@@ -28,15 +32,15 @@ ExpiresByType text/x-javascript "access plus 1 month"
 ExpiresByType application/javascript "access plus 1 month"
 
 ## Dateitypen blockieren:
-<FilesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh)$">
-Order Allow,Deny
-Deny from all
-</FilesMatch>
+#<FilesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh)$">
+#Order Allow,Deny
+#Deny from all
+#</FilesMatch>
 
 ## Hotlinking verhindern:
-RewriteCond %{HTTP_REFERER} !^$
-RewriteCond %{HTTP_REFERER} !^(http|https)://(www\.)?jumi\.biz/ [NC]
-RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
+#RewriteCond %{HTTP_REFERER} !^$
+#RewriteCond %{HTTP_REFERER} !^(http|https)://(www\.)?jumi\.biz/ [NC]
+#RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
 
 ## Eigene Seitenfehler-Meldung:
 ErrorDocument 404 /error/404.html
