added no suffix option

--- a/.htaccess
+++ b/.htaccess
@@ -18,8 +18,10 @@ RewriteCond %{HTTP_HOST} ^www\.jumi\.biz [NC]
 RewriteRule ^(.*)$ https://jumi.biz/$1 [L,R=301]
 
 ## Dateiendungen entfernen
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteRule ^([^\.]+)$ $1.php [NC,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
+RewriteRule ^([^\.]+)$ $1.php [NC,L]
 
 ## Cache-Dauer für Dateitypen:
 ExpiresByType image/jpg "access plus 1 month"
