--- a/.htaccess
+++ b/.htaccess
@@ -18,20 +18,20 @@ RewriteCond %{HTTP_HOST} ^www\.jumi\.biz [NC]
 RewriteRule ^(.*)$ https://jumi.biz/$1 [L,R=301]
 
 ## Dateiendungen entfernen
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.html [NC,L]
-RewriteRule ^([^\.]+)$ $1.php [NC,L]
+#RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteRule ^([^\.]+)$ $1.html [NC,L]
+#RewriteRule ^([^\.]+)$ $1.php [NC,L]
 
 ## Cache-Dauer für Dateitypen:
-ExpiresByType image/jpg "access plus 1 month"
-ExpiresByType image/jpeg "access plus 1 month"
-ExpiresByType image/gif "access plus 1 month"
-ExpiresByType image/png "access plus 1 month"
-ExpiresByType image/x-icon "access plus 1 month"
-ExpiresByType text/css "access plus 1 month"
-ExpiresByType text/x-javascript "access plus 1 month"
-ExpiresByType application/javascript "access plus 1 month"
+#ExpiresByType image/jpg "access plus 1 month"
+#ExpiresByType image/jpeg "access plus 1 month"
+#ExpiresByType image/gif "access plus 1 month"
+#ExpiresByType image/png "access plus 1 month"
+#ExpiresByType image/x-icon "access plus 1 month"
+#ExpiresByType text/css "access plus 1 month"
+#ExpiresByType text/x-javascript "access plus 1 month"
+#ExpiresByType application/javascript "access plus 1 month"
 
 ## Dateitypen blockieren:
 #<FilesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh)$">
