--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,6 @@ RewriteEngine On
 ## always use HTTPS
 Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
 
-
 ## Umleitung auf https:
 #RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
 #RewriteCond %{HTTP:X-Forwarded-Proto} =""
@@ -49,8 +48,8 @@ RewriteRule ^(.*)$ https://jumi.biz/$1 [L,R=301]
 #RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
 
 ## Eigene Seitenfehler-Meldung:
-ErrorDocument 404 /error/404.html
-ErrorDocument 500 /error/500.html
+# ErrorDocument 404 404.html
+# ErrorDocument 500 500.html
 
 ## IP blockieren:
 #Deny from 137.137.137.137
