--- a/.htaccess
+++ b/.htaccess
@@ -1,69 +1,112 @@
-## Directory-Listening verhindern:
+# Redirect HTTP to HTTPS
+
+RewriteEngine On
+RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
+RewriteCond %{HTTP:X-Forwarded-Proto} =""
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+
+# ChatGPT Anweisung
+## Direkten .git Zugriff blockieren
+
+<DirectoryMatch "^\.git">
+    Require all denied
+</DirectoryMatch>
+
+
+# Directory-Listening verhindern:
+## war aktiviert am 231108
+### ChatGPT Anweisung "Disable Directory Listing"
+
 Options -Indexes
 
-## URL-Neuschreibung aktivieren:
-#   231108      RewriteEngine On
 
-## always use HTTPS
-#   231108      Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+# (4.) ChatGPT Anweisung
+# www in URL entfernen:
+## war aktiviert am 231108
+### RewriteCond %{HTTP_HOST} ^www\.jumi\.biz [NC]
+### RewriteRule ^(.*)$ https://jumi.biz/$1 [L,R=301]
 
-## Umleitung auf https:
-#RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
-#RewriteCond %{HTTP:X-Forwarded-Proto} =""
-#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-#RewriteCond %{HTTPS} !=on [OR]
-#RewriteCond %{HTTPS} off
-#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# (5.) ChatGPT Anweisung
+# Dateiendungen entfernen:
+## RewriteCond %{REQUEST_FILENAME} !-d
+## RewriteCond %{REQUEST_FILENAME} !-f
+## RewriteRule ^([^\.]+)$ $1.html [NC,L]
+## RewriteRule ^([^\.]+)$ $1.php [NC,L]
 
-## www in URL entfernen:
-#   231108      RewriteCond %{HTTP_HOST} ^www\.jumi\.biz [NC]
-#   231108      RewriteRule ^(.*)$ https://jumi.biz/$1 [L,R=301]
 
-## Dateiendungen entfernen
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteRule ^([^\.]+)$ $1.html [NC,L]
-#RewriteRule ^([^\.]+)$ $1.php [NC,L]
+# (6.) ChatGPT Anweisung
+# Set Strict Transport Security:
+## Immer HTTPS benutzen / erzwingen
 
-## Cache-Dauer für Dateitypen:
-#ExpiresByType image/jpg "access plus 1 month"
-#ExpiresByType image/jpeg "access plus 1 month"
-#ExpiresByType image/gif "access plus 1 month"
-#ExpiresByType image/png "access plus 1 month"
-#ExpiresByType image/x-icon "access plus 1 month"
-#ExpiresByType text/css "access plus 1 month"
-#ExpiresByType text/x-javascript "access plus 1 month"
-#ExpiresByType application/javascript "access plus 1 month"
+Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
 
-## Dateitypen blockieren:
-#<FilesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh)$">
-#Order Allow,Deny
-#Deny from all
-#</FilesMatch>
 
-## Hotlinking verhindern:
-#RewriteCond %{HTTP_REFERER} !^$
-#RewriteCond %{HTTP_REFERER} !^(http|https)://(www\.)?jumi\.biz/ [NC]
-#RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
+# (7.) ChatGPT Anweisung
+# Hotlinking verhindern:
+## RewriteCond %{HTTP_REFERER} !^$
+## RewriteCond %{HTTP_REFERER} !^(http|https)://(www\.)?jumi\.biz/ [NC]
+## RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
 
-## Eigene Seitenfehler-Meldung:
-# ErrorDocument 404 404.html
-# ErrorDocument 500 500.html
 
-## IP blockieren:
-#Deny from 137.137.137.137
+# (8.) ChatGPT Anweisung
+# Eigene Seitenfehler-Meldung:
 
-## Verzeichniszugriff einschränken:
-#AuthType Basic
-#AuthName "Restricted Area"
-#AuthUserFile /path/to/.htpasswd
-#Require valid-user
+ErrorDocument 404 /404.html
+ErrorDocument 500 /500.html
 
-## Allowing Cross-Origin Resource Sharing (CORS) erlauben:
-#<IfModule mod_headers.c>
-#    Header set Access-Control-Allow-Origin "*"
-#</IfModule>
 
-## MIME-Typ mit Dateityp assoziieren:
-#AddType application/x-httpd-php .html
+# (9.) ChatGPT Anweisung
+# Verzeichniszugriff einschränken:
+
+AuthType Basic
+AuthName "Restricted Area"
+AuthUserFile /path/to/.htpasswd
+Require valid-user
+
+
+# IP blockieren:
+
+Deny from 18.188.203.0
+
+## 18.188.203.0 # Mehrere Anfragen auf Pfade in .git/
+### /api/admin/v2/.git/config
+### /backup/.git/config
+### /blog/.git/config
+
+# (10.) ChatGPT Anweisung
+# Allowing Cross-Origin Resource Sharing (CORS) erlauben:
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
+
+
+# ChatGPT Anweisung
+# Force HTTPS
+## RewriteCond %{HTTPS} !=on [OR]
+## RewriteCond %{HTTPS} off
+
+
+# Cache-Dauer für Dateitypen:
+## ExpiresByType image/jpg "access plus 1 month"
+## ExpiresByType image/jpeg "access plus 1 month"
+## ExpiresByType image/gif "access plus 1 month"
+## ExpiresByType image/png "access plus 1 month"
+## ExpiresByType image/x-icon "access plus 1 month"
+## ExpiresByType text/css "access plus 1 month"
+## ExpiresByType text/x-javascript "access plus 1 month"
+## ExpiresByType application/javascript "access plus 1 month"
+
+
+# Dateitypen blockieren:
+## <FilesMatch "\.(htaccess|htpasswd|ini|phps|fla|psd|log|sh)$">
+## Order Allow,Deny
+## Deny from all
+## </FilesMatch>
+
+
+# MIME-Typ mit Dateityp assoziieren:
+## AddType application/x-httpd-php .html
